[metadata]
name = login_person
version = 0.1

[options]
py_modules = 
  login_person
  login_model

install_requires = 
  reahl-web>=6.1,<6.2
  reahl-component>=6.1,<6.2
  reahl-sqlitesupport>=6.1,<6.2
  reahl-sqlalchemysupport>=6.1,<6.2
  reahl-web-declarative>=6.1,<6.2
  reahl-domain>=6.1,<6.2

tests_require = 
  pytest>=3.0
  reahl-tofu
  reahl-stubble
  reahl-dev
  reahl-webdev
  reahl-browsertools


component = 

persisted = ["login_model:Person",]
